# FrenJam2

./: .gitignore  CMakeLists.txt  README.md  iwyu.sh  iwyu_output.txt  toolchain-mingw64.cmake
Core/: CMakeLists.txt
Core/include/: Flock.hpp
Core/src/: App.cpp  App.hpp  Common.hpp  Reflect.hpp  TypeId.cpp
Core/src/Asset/: AssetLoader.hpp
Core/src/Audio/: AudioPlayer.cpp  AudioPlayer.hpp  AudioSource.hpp
Core/src/Ecs/: Entity.hpp  Registry.cpp  Registry.hpp  Schedule.cpp  Schedule.hpp  Storage.hpp  World.cpp  World.hpp
Core/src/Event/: EventHandler.hpp
Core/src/FileIo/: File.cpp  File.hpp  Font.cpp  Image.cpp  World.cpp
Core/src/Glfw/: Window.cpp  Window.hpp
Core/src/Graphics/: Buffer.cpp  Camera.hpp  Framebuffer.cpp  Gl.cpp  Mesh.cpp  Mesh.hpp  Pipeline.cpp  Renderer.cpp  Renderer.hpp  Shader.cpp  Shader.hpp  SpriteRenderer.hpp  Texture.cpp  Texture.hpp  TextureArray.cpp  TextureAtlas.cpp  TextureAtlas.hpp  VertexArray.cpp  VertexLayout.cpp  VertexLayout.hpp
Core/tests/: Ecs.cpp
Game/: CMakeLists.txt
Game/assets/: 1.txt  2.txt  3.txt  4.txt  5.txt  6.txt  map.txt  title.json  unlit.glsl  world.json
Game/assets/music/: 3.oga  5.oga  6.oga  bad-end.oga  credits.oga  goodend.oga  house.oga  joel.oga  map.oga  musicthatmakesyougodookie-loop.oga  scsa-loop.oga  scsa-reveal.oga  thebonezone-finalmix.oga  title.oga  vargbonezone.oga
Game/src/: AudioHandler.hpp  Dialogue.hpp  DialogueUi.hpp  Door.hpp  Events.hpp  Fade.hpp  Fren.hpp  GameState.hpp  Interactable.hpp  Item.hpp  ItemUi.hpp  Map.hpp  Player.cpp  Player.hpp  Tile.hpp  Using.hpp  main.cpp
(+16 files in other folders)
